Issue #73 Allow sorting recipes by cookability